# multimodel_mri_fusion

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
src/: main.cpp
src/fusion/: FusionFactory.h  IFusionStrategy.h  PrincipalComponentsStrategy.h  WeightedAverageStrategy.h
src/io/: io.cpp  io.h
